# SDL_Framework

./: .gitignore  CMakeLists.txt  README.md  TODO.md
gfx/: pack.json  pack.tps
src/: App.cpp  App.h  AppState.cpp  AppState.h  Assets.cpp  Assets.h  Audio.cpp  Audio.h  Camera.cpp  Camera.h  Entity.cpp  Entity.h  Frame.cpp  Frame.h  Game.cpp  Game.h  GuiElement.cpp  GuiElement.h  Input.cpp  Input.h  Log.h  Map.cpp  Map.h  PlatformSDL.cpp  PlatformSDL.h  RendererSDL.cpp  RendererSDL.h  SDLDebugDraw.cpp  SDLDebugDraw.h  Scene.cpp  Scene.h  Sprite.cpp  Sprite.h  Text.cpp  Text.h  TextElement.cpp  TextElement.h  framework.h  framework_math.h  intersection_tests.h  (+4 more)
src/Box2D/Common/: b2Settings.h
src/sdl2_gfx/: SDL2_gfxPrimitives.c  SDL2_gfxPrimitives.h  SDL2_rotozoom.h
